shubara/resources/ext.shubara/ext.shubara.css
/* FIXME: This file is too long. It has to be broken up and then delivered on-demand
 * as a resource module, only if the required tag/parser hook is used. */

.ext-shubara-navcards {
    min-width: 280px;
    gap: 10px;
}

.ext-shubara-navcards-flex {
    display: flex;
	flex-direction: row;
	flex-flow: row wrap;
	justify-content: space-between;
}

.ext-shubara-navcards-grid {
    display: grid;
    grid-template-columns: 1fr 1fr;
}

/* FIXME: insane stub solution that ONLY WORKS if you have two grid columns, so if
 * the grid-cols attribute is to be implemented, this code has to be thrown in the
 * fucking trash, where it belongs */
@media (max-width: 600px) {
    .ext-shubara-navcards-grid-autohscroll {
        display: flex;
        flex-direction: row;
        overflow: scroll;
    }
}

.ext-shubara-navcard {
    flex: 1;
    min-height: 110px;
    min-width: 110px;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 8px;
    background-color: white;
    background-size: cover;
    background-position: center;
    background-color: #00000030;
    background-blend-mode: overlay;
}

.ext-shubara-navcard img {
    max-width: 100%;
    max-height: 100px;
    padding: 8px;
}

.ext-shubara-navcard span {
    color: white;
    font-size: xxx-large;
    font-family: 'Onest';
    font-weight: 550;
    text-shadow: #00 1px 0 5px;
    transition: font-weight 0.1s ease-in-out;
    padding-left: 4px;
    padding-right: 4px;
    white-space: nowrap;
}

.ext-shubara-navcard:hover span {
    font-weight: 700;
}

.ext-shubara-button {
    transition: 0.1s ease-in-out;
    cursor: pointer;
}

@media (hover: hover) {
    .ext-shubara-button:hover {
        transform: scale(1.03);
    }
}

.ext-shubara-button:active {
    transform: scale(0.99);
}

@media (max-width: 1120px) {
    .ext-shubara-navcard {
        min-width: 130px;
    }
}

.ext-shubara-ulnav {
    flex: 1;
    min-width: 280px;
    padding: 8px;
    text-align: center;
    border-radius: 12px;
    background: var(--color-surface-1);
    border: 4px solid var(--color-surface-2);
}

.ext-shubara-ulnav h2 {
    margin: 0;
    margin-top: 4px;
}

.ext-shubara-notitle ul {
    margin: 0;
}

.ext-shubara-ulnav ul {
    display: flex;
    list-style: none;
    list-style-position: outside;
    padding-left: 0;
    margin-left: 0;
    margin-bottom: 0;
}

/*
 * I have no idea if this approach is actually good or not, but idgaf if it works it
 * works
 * but if there is a better way I would love to throw this shit out da window
 */
.ext-shubara-ulnav ul li ul li {
    background: var(--color-surface-3);
}

.ext-shubara-ulnav ul li ul li ul li {
    background: var(--color-surface-4);
}

.ext-shubara-ulnav-col ul {
    flex-direction: column;
    column-gap: 20px;
    justify-content: space-between;
}

.ext-shubara-ulnav-chiplist ul {
    flex-direction: row;
    flex-wrap: wrap;
    column-gap: 8px;
    justify-content: center;
}

.ext-shubara-ulnav ul li {
    padding: 4px;
    padding-left: 8px;
    padding-right: 8px;
    margin: 4px 0;
    background: var(--color-surface-2);
    border-radius: 8px;
}

.ext-shubara-imagechip-child {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    gap: 4px;
}

.ext-shubara-imagechip {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    border-radius: 12px;
    background-color: var(--color-surface-1);
    border: 4px solid var(--color-surface-2);
    padding: 8px;
    gap: 4px;
    font-family: 'Onest';
    font-size: larger;
    font-weight: 600;
    color: var(--color-emphasized);
}

.ext-shubara-imagechip * {
    pointer-events: none;
    cursor: default;
}

.ext-shubara-imagechip img {
    display: block;
    max-height: 24px;
    width: auto;
}

.ext-shubara-projectstats {
    display: flex;
    flex-direction: row;
    gap: 12px;
    justify-content: space-around;
}

.ext-shubara-projectstats-label { margin: 0; }

.ext-shubara-projectstats-amount {
    margin: 0;
    font-size: xxx-large;
    line-height: 1;
}

.ext-shubara-projectstats > div {
    position: relative;
    flex-grow: 1;
}

.ext-shubara-projectstats > div:not(:last-child)::after {
    content: '';
    position: absolute;
    right: -2px;
    top: 15%;
    width: 2px;
    height: 70%;
    background-color: var(--color-surface-2);
}

